// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SortButtons Sort options should use templates sortable properties as options (with asc and desc for each) 1`] = `
<div
  className="sort-buttons"
>
  <Uncontrolled(DropdownList)
    className="sort-dropdown"
    data={
      Array [
        Object {
          "context": "System",
          "label": "Title",
          "type": "text",
          "value": "title",
        },
        Object {
          "context": "System",
          "label": "Date added",
          "type": "number",
          "value": "creationDate",
        },
        Object {
          "context": "System",
          "label": "Date modified",
          "type": "number",
          "value": "editDate",
        },
        Object {
          "context": "id",
          "label": "date",
          "name": "date",
          "type": "date",
          "value": "metadata.date",
        },
        Object {
          "context": "id",
          "label": "number",
          "name": "number",
          "type": "numeric",
          "value": "metadata.number",
        },
        Object {
          "context": "id",
          "label": "my select",
          "name": "my_select",
          "type": "select",
          "value": "metadata.my_select",
        },
        Object {
          "context": "id",
          "label": "sortableProperty",
          "name": "sortable_name",
          "type": "text",
          "value": "metadata.sortable_name",
        },
        Object {
          "context": "id",
          "label": "inherited1",
          "name": "inherited1",
          "type": "relationship",
          "value": "metadata.inherited1.inheritedValue",
        },
      ]
    }
    onChange={[Function]}
    textField="label"
    value="title"
    valueField="value"
  />
  <button
    className="sorting-toggle false"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <Connect(Icon)
      icon="arrow-down"
    />
  </button>
</div>
`;

exports[`SortButtons Sort options when relevance sorting is active and there is no search term should fall back to sorting by most recent creation date 1`] = `
<div
  className="sort-buttons"
>
  <Uncontrolled(DropdownList)
    className="sort-dropdown"
    data={
      Array [
        Object {
          "context": "System",
          "label": "Title",
          "type": "text",
          "value": "title",
        },
        Object {
          "context": "System",
          "label": "Date added",
          "type": "number",
          "value": "creationDate",
        },
        Object {
          "context": "System",
          "label": "Date modified",
          "type": "number",
          "value": "editDate",
        },
        Object {
          "context": "id",
          "label": "date",
          "name": "date",
          "type": "date",
          "value": "metadata.date",
        },
        Object {
          "context": "id",
          "label": "number",
          "name": "number",
          "type": "numeric",
          "value": "metadata.number",
        },
        Object {
          "context": "id",
          "label": "my select",
          "name": "my_select",
          "type": "select",
          "value": "metadata.my_select",
        },
        Object {
          "context": "id",
          "label": "sortableProperty",
          "name": "sortable_name",
          "type": "text",
          "value": "metadata.sortable_name",
        },
        Object {
          "context": "id",
          "label": "inherited1",
          "name": "inherited1",
          "type": "relationship",
          "value": "metadata.inherited1.inheritedValue",
        },
      ]
    }
    onChange={[Function]}
    textField="label"
    value="creationDate"
    valueField="value"
  />
  <button
    className="sorting-toggle false"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    <Connect(Icon)
      icon="arrow-down"
    />
  </button>
</div>
`;
